k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: xpad-bko
    namespace: gigxpad-staging
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: xpad-bko
  template:
    metadata:
      labels:
        app: xpad-bko
    spec:
      containers:
        - image: xpad-bko
          name: xpad-bko
          ports:
            - containerPort: 3000
          #readinessProbe:
            #httpGet:
              #path: actuator/health
              #port: 8080
            #initialDelaySeconds: 30
          #livenessProbe:
            #httpGet:
              #path: actuator/health
              #port: 8080
            #initialDelaySeconds: 120
            #periodSeconds: 20
            #timeoutSeconds: 60
          resources:
            limits:
              cpu: 200m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 2Gi
          imagePullPolicy: Always
      imagePullSecrets:
        - name: gigxpad-bko-dev-secret
