k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xpad-bko-ingress
  namespace: gigxpad-stagging
  annotations:
    kubernetes.io/ingress.class: nginx
    ngress.kubernetes.io/rewrite-target: /$1
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #kubernetes.io/tls-acme: "true"

spec:
  rules:
    - host: stage-bko.gigxpad.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xpad-bko
                port:
                  number: 3000
